--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
-    color: white;
+    background-color: rgb(188, 60, 116);
+    color: rgb(144, 144, 144);
 }
 
 h1,
